10-PersistentVolume.yaml

#pvc deploy

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pv-deploy
spec:
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: pvc
      containers:
        - name: pvc-deploy
          image: busybox
          command: ['sh', '-c', 'while true; do echo GEN AI!!!!! >> /output/output.txt; sleep 6; done']
          volumeMounts:
            - mountPath: /output 
              name: my-volume
