11-sc.yaml
#making pod use the above pvc
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc-deploy
spec:
  selector:
    matchLabels:
      app: sc
  template:
    spec:
      volumes:
        - name: sc-volume
          persistentVolumeClaim:
            claimName: pvc-claim
      containers: 
        - name: sc-container
          image: nginx
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: sc-volume
