13-cm-secrets.yml
# This is a basic way to set env variables
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env-deploy
  template:
    metadata:
      labels:
        app: env-deploy
    spec:
      containers:
        - name: busybox
          image: busybox
          command: ['sh', '-c', 'echo ConfigMap value is $CONFIGMAPVAR && sleep 3600']  #$CONFIGMAPVAR This value can be of anything
---
#If you want to pass the value 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env-deploy
  template:
    metadata:
      labels:
        app: env-deploy
    spec:
      containers:
        - name: busybox
          image: busybox
          command: ['sh', '-c', 'echo Your name is $CONFIGMAPVAR && sleep 3600']  #$CONFIGMAPVAR This value can be of anything
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env-deploy
  template:
    metadata:
      labels:
        app: env-deploy
    spec:
      containers:
        - name: busybox
          image: busybox
          command: ["sleep","3600"]
---
#Combination of config map and secrets
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env-deploy
  template:
    metadata:
      labels:
        app: env-deploy
    spec:
      containers:
        - name: busybox
          image: busybox
          command: ["sh", "-c", "while true; do echo Your Name is $MYNAME with the Password $MYPASSWORD; sleep 10; done"]
---
#config map as volume
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-config-vol-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-vol
  template:
    metadata:
      labels:
        app: config-vol
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: my-config   #keys from this config map will be mounted as files
      containers:
        - name: busybox
          image: busybox
          command: ["sh", "-c", "while true; do cat /etc/config/name; sleep 10; done"]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config   #all keys from the config map will be available as files under this path
#when there are huge logs and zip files then its better to use volumes instead of env variables
---

#whever the data in config map or secret is updated the volume will also get updated automatically and 
#if its env variable then pod need to be restarted using rollout restart command
# kubectl rollout restart deployment <deployment-name>
