3-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: test-set
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels: 
        app: backend
    spec:
      containers:
        - name: replica-cont
          image: devopswithcloudhub/nginx:blue
          ports:
            - containerPort: 80
