5-recreate.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: test-set
spec:
  replicas: 3
  strategy:
    type: Recreate #Terminates all the existing pods before creating new ones.
    rollingUpdate:
      maxUnavailable: 1 
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels: 
        app: backend
    spec:
      containers:
        - name: replica-cont
          image: devopswithcloud/nginx:blue
          ports:
            - containerPort: 80
