harness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: pavandath/harness-py-app:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
  labels:
    app: python-app
spec:
  selector:
    app: python-app
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
